--- a/farmer_app/templates/farmer_dashboard.html
+++ b/farmer_app/templates/farmer_dashboard.html
@@ -406,7 +406,7 @@ html, body {
 
         <a href="#"><i class="bi bi-graph-up-arrow"></i> Sales</a>
         <a href="{% url 'farmer_orders' %}"><i class="bi bi-box-seam"></i> Orders</a>
-        <a href="#"><i class="bi bi-star-fill"></i> Reviews</a>
+        <a href="{% url 'farmer_reviews' %}"><i class="bi bi-star-fill"></i> Reviews</a>
         <a href="{% url 'farmer_questions' %}">
         <i class="bi bi-question-circle-fill"></i> Customer Questions
         </a>
