--- a/customer_app/templates/customer_dashboard.html
+++ b/customer_app/templates/customer_dashboard.html
@@ -407,7 +407,7 @@ html, body {
 
     <ul class="dropdown-menu dropdown-menu-end">
         <li><a class="dropdown-item" href="{% url 'customer_profile' %}">Profile</a></li>
-        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+        <li><a class="dropdown-item" href="{% url 'customer_change_password' %}">Change Password</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item text-danger" href="{% url 'customer_logout' %}">Logout</a></li>
     </ul>
