--- a/farmer_app/templates/farmer_dashboard.html
+++ b/farmer_app/templates/farmer_dashboard.html
@@ -383,7 +383,7 @@ html, body {
 
         <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="{% url 'farmer_profile' %}">Profile</a></li>
-            <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+            <li><a class="dropdown-item" href="{% url 'farmer_change_password' %}">Change Password</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item text-danger" href="{% url 'customer_logout' %}">Logout</a></li>
         </ul>
@@ -404,7 +404,7 @@ html, body {
             <a href="{% url 'farmer_product_list' %}" class="ms-4">➤ View Products</a>
         </div>
 
-        <a href="#"><i class="bi bi-graph-up-arrow"></i> Sales</a>
+        <a href="{% url 'farmer_sales' %}"><i class="bi bi-graph-up-arrow"></i> Sales</a>
         <a href="{% url 'farmer_orders' %}"><i class="bi bi-box-seam"></i> Orders</a>
         <a href="{% url 'farmer_reviews' %}"><i class="bi bi-star-fill"></i> Reviews</a>
         <a href="{% url 'farmer_questions' %}">
