--- a/admin_app/templates/admin_dashboard.html
+++ b/admin_app/templates/admin_dashboard.html
@@ -230,8 +230,7 @@
             </a>
 
             <ul class="dropdown-menu dropdown-menu-end shadow">
-                <li><a class="dropdown-item" href="#">Change Admin Password</a></li>
-                <li><a class="dropdown-item" href="#">Update Platform Charges (Delivery, COD)</a></li>
+                <li><a class="dropdown-item" href="{% url 'admin_password_change' %}">Change Admin Password</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-danger" href="/logout/">Logout</a></li>
             </ul>
