--- a/home_app/templates/home_product_list.html
+++ b/home_app/templates/home_product_list.html
@@ -162,7 +162,7 @@
                     <button type="submit" class="btn btn-apply w-100">
                         Apply
                     </button>
-                    <a href="{% url 'product_list' %}" class="btn btn-clear w-100">
+                    <a href="{% url 'home_product_list' %}" class="btn btn-clear w-100">
                         Clear
                     </a>
                 </div>
