--- a/admin_app/templates/admin_dashboard.html
+++ b/admin_app/templates/admin_dashboard.html
@@ -143,6 +143,7 @@
         <a href="{% url 'admin_review_management' %}"><i class="bi bi-star-fill"></i> Reviews</a>
         <a href="{% url 'admin_sales_report' %}"><i class="bi bi-bar-chart-fill"></i> Sales & Reports</a>
         <a href="{% url 'admin_system_activity' %}"><i class="bi bi-activity"></i> System Activity</a>
+        <a href="{% url 'admin_contact_queries' %}"><i class="bi bi-envelope-fill"></i>Queries</a>
     </div>
 
     <!-- CONTENT -->
